@@ -1,0 +1,58 @@
+<?php
+// index
+define('_AM_CONTACT_INDEX_ADMENU1', 'Kontakt');
+define('_AM_CONTACT_INDEX_TOTAL', "Es befinden sich  <span class='green'>%s</span> Anfragen in der Datenbank");
+// Contact
+define('_AM_CONTACT_ID', 'Id');
+define('_AM_CONTACT_SUBJECT', 'Betreff');
+define('_AM_CONTACT_DEPARTMENT', 'Abteilung');
+define('_AM_CONTACT_SUBMITTER', 'Einsender');
+define('_AM_CONTACT_DATE', 'Eingesendet am');
+define('_AM_CONTACT_MESSAGE', 'Nachricht');
+define('_AM_CONTACT_EMAIL', 'E-Mail');
+define('_AM_CONTACT_URL', 'URL');
+define('_AM_CONTACT_VIEWURL', 'URL besuchen');
+define('_AM_CONTACT_ICQ', 'ICQ');
+define('_AM_CONTACT_SKYPE', 'Skype');
+define('_AM_CONTACT_COMPANY', 'Firma');
+define('_AM_CONTACT_LOCATION', 'Ort');
+define('_AM_CONTACT_IP', 'IP');
+define('_AM_CONTACT_PHONE', 'Telefon');
+define('_AM_CONTACT_ADDRESS', 'Adresse');
+define('_AM_CONTACT_ACTION', 'Aktion');
+define('_AM_CONTACT_VIEW', 'Zeige');
+define('_AM_CONTACT_REPLY', 'Antworten');
+define('_AM_CONTACT_HAVEREPLY', 'Beantwortet');
+define('_AM_CONTACT_HAVENTREPLY', 'Nicht beantwortet');
+define('_AM_CONTACT_FROM', 'Absender:');
+define('_AM_CONTACT_NAMEFROM', 'Name');
+define('_AM_CONTACT_MAILFROM', 'E-Mail');
+define('_AM_CONTACT_TO', 'Empfänger:');
+define('_AM_CONTACT_NAMETO', 'Name');
+define('_AM_CONTACT_MAILTO', 'E-Mail');
+define('_AM_CONTACT_TITLE', 'Titel');
+define('_AM_CONTACT_INFO', 'Information');
+define('_AM_CONTACT_MSG_EXIST', 'Ausgewählte Anfrage exisitiert nicht');
+define('_AM_CONTACT_MSG_DELETE', 'Soll diese Anfrage und alle Antworten wirklich gelöscht werden?');
+define('_AM_CONTACT_MSG_DELETED', 'Ihre ausgewählte Anfrage wurde gelöscht');
+define('_AM_CONTACT_MSG_DELETEERROR', 'Fehler beim Löschen der Anfrage');
+define('_AM_CONTACT_MSG_PRUNE_DELETED', 'Anfrage %s gelöscht');
+define('_AM_CONTACT_TOOLS_PRUNE', 'Anfragen löschen');
+define('_AM_CONTACT_TOOLS_PRUNE_BEFORE', 'Lösche Anfragen, die vor diesem Datum gestellt wurden');
+define('_AM_CONTACT_TOOLS_PRUNE_REPLYONLY', 'Nur beantwortete Anfragen löschen');
+define('_AM_CONTACT_LOGS_FORM', 'Log-Formular');
+define('_AM_CONTACT_LOGS_COLUMN', 'Wähle die erforderlichen Spalten');
+define('_AM_CONTACT_LOGS_COLUMN_PHONE', 'Telefon');
+define('_AM_CONTACT_LOGS_COLUMN_URL', 'URL');
+define('_AM_CONTACT_LOGS_COLUMN_MAIL', 'E-Mail');
+//2.25
+define('_AM_CONTACT_CANTREPLY', 'Kann nicht beantworten');
+//2.25 RC1
+define('_AM_CONTACT_UPGRADEFAILED0', "Aktualisierung fehlgeschlagen - konnte Feld '%s' nicht umbenennen");
+define('_AM_CONTACT_UPGRADEFAILED1', "Aktualisierung fehlgeschlagen - konnte neues Feld '%s' nicht erstellen");
+define('_AM_CONTACT_UPGRADEFAILED2', "Aktualisierung fehlgeschlagen - konnte Tabelle '%s' nicht umbenennen");
+define('_AM_CONTACT_ERROR_COLUMN', 'Konnte neue Spalte in Datenbank nicht erstellen: %s');
+define('_AM_CONTACT_ERROR_BAD_XOOPS', 'Dieses Modul benötigt mindestens Xoops Version %s (Ihre derzeitige Version ist %s)');
+define('_AM_CONTACT_ERROR_BAD_PHP', 'Dieses Modul benötigt mindestens PHP Version %s (Ihre derzeitige Version ist %s)');
+define('_AM_CONTACT_ERROR_TAG_REMOVAL', 'Konnte Tags vom Modul Tag nicht entfernen');
+
