@@ -1,0 +1,51 @@
+<?php
+define('_MD_CONTACT_FORM', 'Kontaktformular');
+define('_MD_CONTACT_NAME', 'Name');
+define('_MD_CONTACT_MAIL', 'E-Mail');
+define('_MD_CONTACT_URL', 'URL');
+define('_MD_CONTACT_ICQ', 'ICQ');
+define('_MD_CONTACT_SKYPE', 'Skype');
+define('_MD_CONTACT_COMPANY', 'Firma');
+define('_MD_CONTACT_LOCATION', 'Ort');
+define('_MD_CONTACT_PHONE', 'Telefon');
+define('_MD_CONTACT_ADDRESS', 'Adresse');
+define('_MD_CONTACT_SUBJECT', 'Betreff');
+define('_MD_CONTACT_MESSAGE', 'Nachricht');
+define('_MD_CONTACT_DEPARTMENT', 'Abteilung');
+define('_MD_CONTACT_DEFULTDEP', 'Standardempfänger');
+define('_MD_CONTACT_MES_SEND', 'Danke für Ihre Anfrage');
+define('_MD_CONTACT_MES_NOVALIDEMAIL', 'Die E-Mail Adresse ist ungültig');
+define('_MD_CONTACT_MES_NOTSAVE', 'Die Nachricht wurde nicht in der Datenbank gespeichert');
+define('_MD_CONTACT_MES_SAVEINDB', 'Die Nachricht wurde in der Datenbank gespeichert');
+define('_MD_CONTACT_MES_SENDERROR', 'Beim Senden der Nachricht ist ein Fehler aufgetreten');
+define('_MD_CONTACT_MES_ERROR', 'Fehler');
+define('_MD_CONTACT_MES_NOCAPTCHA', 'Captcha ist erforderlich!');
+define('_MD_CONTACT_MES_CAPTCHAINCORRECT', 'Captcha ungültig!');
+//2.1
+define('_MD_CONTACT_ICQ_NAME', 'ICQ');
+define('_MD_CONTACT_ICQ_INFO', 'ICQ eingeben');
+define('_MD_CONTACT_SKYPE_NAME', 'Skype Name');
+define('_MD_CONTACT_SUBMIT', 'Absenden');
+define('_MD_CONTACT_NAME_INFO', 'Name eingeben');
+define('_MD_CONTACT_MAIL_INFO', 'E-Mail eingeben');
+define('_MD_CONTACT_URL_INFO', 'Webseite eingeben');
+define('_MD_CONTACT_COMPANY_INFO', 'Firma eingeben');
+define('_MD_CONTACT_ADDRESS_INFO', 'Adresse eingeben');
+define('_MD_CONTACT_LOCATION_INFO', 'Ort eingeben');
+define('_MD_CONTACT_PHONE_INFO', 'Telefon eingeben');
+define('_MD_CONTACT_SKYPE_NAME_INFO', 'Skype Name eingeben');
+define('_MD_CONTACT_SUBJECT_INFO', 'Betreff eingeben');
+define('_MD_CONTACT_MESSAGE_INFO', 'Nachricht eingeben');
+//2.21
+define('_MD_CONTACT_MAILCONFIRM_SUBJECT', 'Bestätigungsmail');
+define('_MD_CONTACT_MAILCONFIRM_BODY', '
+Sehr geehrte(r) {NAME}
+
+Wir bestätigen Ihnen den Erhalt der E-Mail
+
+Betreff:{SUBJECT}
+Nachricht: 
+{BODY}
+
+Wir werden uns so bald wie möglich mit Ihnen in Verbindung setzen.
+');
